<resources>
    <string name="share_handler_no_url_found">This share isn\'t an Awful link!</string>
    <string name="awful_bookmarks_shortcut_id">awful-bookmarks-shortcut</string>
    <string name="awful_web_provider">AwfulWebProvider</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="refresh">Refresh</string>
    <string name="login">Login</string>
    <string name="login_message">Login with your Awful credentials</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_succeeded">GLUUUUUUUUUUEEEEEEE</string>
    <string name="login_failed">Login failed!</string>
    <string name="logout">All your dreams</string>
    <string name="logout_message">Make all your wildest dreams come true?</string>
    <string name="private_message">Private messages</string>
    <string name="new_pm">New private message</string>
    <string name="toggle_folder">Toggle mail folder</string>
    <string name="select_message">Open a message or create a new one</string>
    <string name="forums_updated_message">Forums updated</string>
    <plurals name="numberOfNewAnnouncements">
        <item quantity="one">%d new announcement</item>
        <item quantity="other">%d new announcements</item>
    </plurals>
    <plurals name="numberOfOldUnreadAnnouncements">
        <item quantity="one">%d unread announcement</item>
        <item quantity="other">%d unread announcements</item>
    </plurals>
    <string name="announcements_status_fetching">Getting announcements…</string>
    <string name="announcements_status_none">No current announcements</string>
    <string name="announcements_status_failed">Couldn\'t get announcements!</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_title">The SA Forums</string>
    <string name="announcements">Announcements</string>
    <string name="usercp">Bookmarks</string>
    <string name="user_cp">Bookmarks</string>
    <string name="go_to">Go to page</string>
    <string name="invalid_page">Enter a real number</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="page_bar_text">Page %1$d/%2$s</string>
    <string name="page_bar_next_page_description">Next page</string>
    <string name="page_bar_prev_page_description">Previous page</string>
    <string name="page_bar_refresh_page_description">Refresh page</string>
    <string name="forums_title">Forums</string>
    <string name="favourite_forums_title">Favorites</string>
    <string name="show_and_hide_subforums">Show and hide subforums</string>
    <string name="no_forums_data">No forums data</string>
    <string name="no_favourites">Long-press forums to add</string>
    <string name="forums_update_failure_message">Couldn\'t get forums data.\nCheck your connection and restart.</string>
    <string name="updating_forums">Updating forums…</string>
    <string name="forums_list_unset_favorite">Unfavorite</string>
    <string name="forums_list_set_favorite">Set favorite</string>
    <string name="forums_list_show_favorites_view">Show favorites</string>
    <string name="forums_list_show_all_forums">Show all forums</string>
    <string name="thread_tag_description">Thread tag</string>
    <string name="thread_secondary_tag_description">Thread type</string>
    <string name="thread_rating_description">Thread rating</string>
    <string name="thread_sticky_description">This thread is a sticky</string>
    <string name="thread_locked_description">This thread is locked</string>
    <string name="thread_just_post">Post Thread</string>
    <string name="thread_hidden">This thread is hidden</string>
    <string name="post_reply">Post reply</string>
    <string name="bookmark">Bookmark</string>
    <string name="unbookmark">Unbookmark</string>
    <string name="bookmarkarchived">Archived</string>
    <string name="rate_thread">Rate thread</string>
    <string name="vote_failed">An error occurred while voting, please try again</string>
    <string name="vote_succeeded">Thread Rated</string>
    <string name="vote_succeeded_sub">THANK GOD YOU VOTED!</string>
    <string name="copy_url">Copy thread URL</string>
    <string name="copy_url_success">URL has been copied to the clipboard</string>
    <string name="share_thread">Share thread</string>
    <string name="find">Find on page</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="yospos">YOSPOS</string>
    <string name="thread_lock">Lock thread</string>
    <string name="thread_unlock">Unlock thread</string>
    <string name="show_self">Admire your posts</string>
    <string name="next_page">Next page</string>
    <string name="mark_last_read_progress">Marking Last-Read</string>
    <string name="mark_last_read_success">Post Marked</string>
    <string name="please_wait_subtext">Please wait…</string>
    <string name="ignore_title">Ignore user</string>
    <string name="ignore_message">Warning: Ignoring a user can currently not be undone within Awful</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="web_view_missing_alert_title">Can\'t start thread view</string>
    <string name="web_view_missing_alert_message">WebView may be updating, please restart the app</string>
    <string name="goto_firstpage">First page</string>
    <string name="goto_lastpage">Last page</string>
    <string name="toggle_bookmark">Toggle bookmark</string>
    <string name="toggle_bookmark_color">Toggle bookmark color</string>
    <string name="mark_unread">Mark thread unread</string>
    <string name="mark_unread_success">Thread Marked Unread</string>
    <string name="search_thread">Search this thread</string>
    <string name="toggle_hidden_thread">Un/Hide this thread</string>
    <string name="filter_emote_hint">Search terms</string>
    <string name="bbcode">BBCode</string>
    <string name="submit">Submit</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="signature">Show Signature</string>
    <string name="disableEmots">Disable Smilies in This Post</string>
    <string name="add_attachment">Add file attachment</string>
    <string name="remove_attachment">Remove file attachment</string>
    <string name="file_attached">Set file %s as attachment</string>
    <string name="file_too_big">%s exceeds the allowed 1 MB attachment size and has not been attached</string>
    <string name="file_resolution_too_big">%1$s  exceeds the allowed 1280x1024 resolution (%2$dx%3$d) and has not been attached</string>
    <string name="file_wrong_filetype">%s is not a .gif, .jpg or .png</string>
    <string name="file_unreadable">File %s could not be accessed</string>
    <string name="reply_bold">Bold</string>
    <string name="reply_italics">Italics</string>
    <string name="reply_underline">Underline</string>
    <string name="reply_strikeout">Strikeout</string>
    <string name="reply_superscript">Superscript</string>
    <string name="reply_subscript">Subscript</string>
    <string name="reply_fixed_width">Fixed Width</string>
    <string name="reply_spoiler">Spoiler Text</string>
    <string name="reply_emotes">Emotes</string>
    <string name="reply_img_tag">Insert Image</string>
    <string name="reply_url_tag">Insert URL</string>
    <string name="reply_video">Insert Video</string>
    <string name="reply_quote">Quote Block</string>
    <string name="reply_code">Code Block</string>
    <string name="reply_list">List</string>
    <string name="reply_pre">Preserve Space</string>
    <string name="search_forums_select_forums">Select forums</string>
    <string name="search_forums_special_terms">Search terms</string>
    <string name="search_forums_special_terms_by_userid">User id</string>
    <string name="search_forums_special_terms_by_username">Username</string>
    <string name="search_forums_special_terms_by_intitle">In title</string>
    <string name="search_forums_special_terms_by_thread_id">Thread id</string>
    <string name="search_forums_special_terms_by_quoting">Quoting user</string>
    <string name="prefs_account">Account</string>
    <string name="prefs_misc">Device and navigation</string>
    <string name="load_images">Load images</string>
    <string name="load_images_summary">Uncheck to show links instead</string>
    <string name="no_3g_images">Only load on Wi-Fi</string>
    <string name="no_3g_images_summary">Disable images when using mobile data</string>
    <string name="load_avatars">Show avatars</string>
    <string name="hide_read_images">Hide old images</string>
    <string name="hide_read_images_summary">Hide images in previously viewed posts</string>
    <string name="show_smilies">Show emotes</string>
    <string name="show_smilies_summary">Uncheck to replace with :text: versions</string>
    <string-array name="imgur_thumbnails">
        <item>Use original pictures</item>
        <item>Tiny (160px)</item>
        <item>Medium (320px)</item>
        <item>Large (640px)</item>
        <item>Huge (1024px)</item>
    </string-array>
    <string name="disable_timgs">Disable timgs</string>
    <string name="disable_timgs_summary">Don\'t shrink large images</string>
    <string name="disable_gifs">Disable GIF animation</string>
    <string name="disable_gifs_summary">Extends battery life significantly</string>
    <string name="misc_category_display">Display</string>
    <string name="page_layout">Thread layout</string>
    <string name="orientation">Screen orientation</string>
    <string name="immersion_mode">Immersive mode</string>
    <string name="immersion_mode_summary">Use the full screen, swipe the top or bottom for controls</string>
    <string name="misc_category_navigation">Navigation</string>
    <string name="disable_pull_next">Disable pull-for-next</string>
    <string name="disable_pull_next_summary">Disable pull at bottom of thread navigation</string>
    <string name="pull_to_refresh_distance">Pull-to-refresh distance</string>
    <string name="pull_to_refresh_distance_summary">Swipe distance needed to cause a refresh:</string>
    <string name="lock_scrolling">Disable view swiping</string>
    <string name="lock_scrolling_summary">No horizontal swiping navigation</string>
    <string name="volume_scroll">Volume button scrolling</string>
    <string name="volume_scroll_summary">Use volume controls to scroll threads</string>
    <string-array name="transformer">
        <item>Disabled</item>
        <item>Accordion</item>
        <item>Background To Foreground</item>
        <item>Cube In</item>
        <item>Cube Out</item>
        <item>Depth Page</item>
        <item>Foreground To Background</item>
        <item>Rotate Down</item>
        <item>Rotate Up</item>
        <item>Stack</item>
        <item>Tablet</item>
        <item>Zoom In</item>
        <item>Zoom Out Slide</item>
        <item>Zoom Out</item>
    </string-array>
    <string name="username_pref">Username</string>
    <string name="features">Refresh account features</string>
    <string name="features_summary">Platinum: No | Archives: No | No Ads: No</string>
    <string name="send_username_in_report">Sign reports</string>
    <string name="send_username_in_report_summary">Attach username to crash reports</string>
    <string name="mod_request_duration_label">Block posting for</string>
    <string name="mod_request_ban_type_label">Ban type</string>
    <string name="mod_request_reason_hint">Reason</string>
    <string name="mod_request_reason_caption">Visible to ALL forum members, and used as the reason in the Leper\'s Colony.</string>
    <string name="mod_request_notes_hint">Moderator notes (optional)</string>
    <string name="mod_request_notes_caption">Only visible to other mods and admins.</string>
    <string name="mod_request_submit">Submit</string>
</resources>