<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <SwitchPreference
            android:key="images_enabled"
            android:title="@string/load_images"
            android:summary="@string/load_images_summary"
            android:defaultValue="true"
            />
        <SwitchPreference
            android:key="no_3g_images"
            android:title="@string/no_3g_images"
            android:summary="@string/no_3g_images_summary"
            android:defaultValue="false"
            android:dependency="images_enabled"
            />
        <SwitchPreference
            android:key="hide_read_images"
            android:title="@string/hide_read_images"
            android:summary="@string/hide_read_images_summary"
            android:defaultValue="false"
            />
        <SwitchPreference
            android:key="avatars_enabled"
            android:title="@string/load_avatars"
            android:defaultValue="true"
            />
        <SwitchPreference
            android:key="show_smilies"
            android:title="@string/show_smilies"
            android:summary="@string/show_smilies_summary"
            android:defaultValue="true"
            />
        <ListPreference
            android:key="imgur_thumbnails"
            android:title="@string/imgur_thumbnails"
            android:entries="@array/imgur_thumbnails"
            android:entryValues="@array/imgur_thumbnails_values"
            android:defaultValue="d"
            />
        <SwitchPreference
            android:key="disable_timgs"
            android:title="@string/disable_timgs"
            android:summary="@string/disable_timgs_summary"
            android:defaultValue="false"
            />
</PreferenceScreen>
