<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/first_page"
        android:title="@string/goto_firstpage" />
    <item
        android:id="@+id/last_page"
        android:title="@string/goto_lastpage" />
    <item
        android:id="@+id/go_to_page"
        android:title="@string/go_to" />
    <item
        android:id="@+id/thread_bookmark"
        android:title="@string/toggle_bookmark" />
    <item
        android:id="@+id/thread_bookmark_color"
        android:title="@string/toggle_bookmark_color" />
    <item
        android:id="@+id/mark_thread_unread"
        android:title="@string/mark_unread" />
    <item
        android:id="@+id/copy_url_thread"
        android:title="@string/copy_url" />

</menu>
