<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/prefs_misc">
        <PreferenceCategory android:title="@string/misc_category_performance">
            <CheckBoxPreference
                android:key="enable_hardware_acceleration"
                android:title="@string/enable_hardware_acceleration"
                android:summary="@string/enable_hardware_acceleration_summary"
                android:defaultValue="true"
                android:enabled="false"
                />
            <CheckBoxPreference
                android:key="disable_gifs2"
                android:title="@string/disable_gifs"
                android:summary="@string/disable_gifs_summary"
                android:defaultValue="true"
                android:enabled="false"
                />
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/misc_category_display">
            <ListPreference
                android:key="page_layout"
                android:title="@string/page_layout"
                android:entries="@array/page_layouts"
                android:entryValues="@array/page_layout_values"
                android:defaultValue="auto"
                android:enabled="false"
                />
            <ListPreference
                android:key="orientation"
                android:title="@string/orientation"
                android:entries="@array/orientations"
                android:entryValues="@array/orientation_values"
                android:defaultValue="default"
                />
            <CheckBoxPreference
                android:key="immersion_mode"
                android:title="@string/immersion_mode"
                android:summary="@string/immersion_mode_summary"
                android:defaultValue="false"
                android:enabled="false"
                />
            <ListPreference
                android:key="transformer"
                android:title="@string/transformer"
                android:summary="%s"
                android:entries="@array/transformer"
                android:entryValues="@array/transformer_values"
                android:defaultValue="DepthPage"
                />
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/misc_category_navigation">
            <CheckBoxPreference
                android:key="upper_next_arrow"
                android:title="@string/show_next_page_button_at_top"
                android:summary="@string/show_next_page_button_at_top_summary"
                android:defaultValue="false"
                />
            <CheckBoxPreference
                android:key="disable_pull_next"
                android:title="@string/disable_pull_next"
                android:summary="@string/disable_pull_next_summary"
                android:defaultValue="false"
                />
            <Preference
                android:key="pull_to_refresh_distance"
                android:title="@string/pull_to_refresh_distance"
                android:summary="@string/pull_to_refresh_distance_summary"
                android:defaultValue="0.5"
                />
            <CheckBoxPreference
                android:key="lock_scrolling"
                android:title="@string/lock_scrolling"
                android:summary="@string/lock_scrolling_summary"
                android:defaultValue="false"
                />
            <CheckBoxPreference
                android:key="volume_scroll"
                android:title="@string/volume_scroll"
                android:summary="@string/volume_scroll_summary"
                android:defaultValue="false"
                />
        </PreferenceCategory>

    </PreferenceScreen>
</PreferenceScreen>