<?xml version="1.0" encoding="utf-8"?>
<menu 
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	<item android:id="@+id/user_cp" app:showAsAction="ifRoom" android:title="@string/usercp" android:icon="?attr/iconMenuBookmark" />
	<item
		android:id="@+id/go_to"
		android:icon="?attr/iconMenuGoToPage"
		android:title="@string/go_to"
		/>
	<item
		android:id="@+id/refresh"
		android:icon="?attr/iconMenuRefresh"
		android:title="@string/refresh" />
    <item 
        android:id="@+id/pm" 
        android:icon="?attr/iconMenuMail"
        android:title="@string/private_message"
        />
	<item
		android:id="@+id/settings"
		android:icon="?attr/iconMenuSettings"
		android:title="@string/settings" />
	<item
		android:title="@string/logout"
        android:id="@+id/logout"
        android:icon="?attr/iconMenuLogout"/>
	
</menu>
