<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reply"
        android:title="@string/post_reply"
        android:icon="?attr/iconMenuReplyDark"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/bookmark"
        android:title="@string/bookmark"
        android:icon="?attr/iconMenuBookmarkDark"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/rate_thread"
        android:title="@string/rate_thread"
        android:icon="?attr/iconMenuRateDark"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/copy_url"
        android:icon="?attr/iconMenuLinkDark"
        android:title="@string/copy_url"
        app:showAsAction="never"
        />
    <item
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:id="@+id/share_thread"
        android:icon="?attr/iconMenuShareDark"
        android:title="@string/share_thread"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/find"
        android:icon="?attr/iconMenuFindInPageDark"
        android:title="@string/find"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/keep_screen_on"
        android:icon="?attr/iconMenuLastReadDark"
        android:title="@string/keep_screen_on"
        android:checkable="true"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/yospos"
        android:title="@string/yospos"
        android:icon="?attr/iconMenuYosposDark"
        app:showAsAction="never"
        />
	
</menu>
