<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sidebar_index"
        android:title="@string/drawer_title"/>
    <item
        android:id="@+id/sidebar_forum"
        android:title=""/>
    <item
        android:id="@+id/sidebar_thread"
        android:title=""/>

    <group
        android:id="@+id/main_nav_options">
        <item
            android:id="@+id/sidebar_bookmarks"
            android:icon="@drawable/ic_book"
            android:title="@string/user_cp" />
        <item
            android:id="@+id/sidebar_search"
            android:icon="@drawable/ic_search_dark"
            android:title="@string/search" />
        <item
            android:id="@+id/sidebar_pm"
            android:icon="@drawable/ic_mail_dark"
            android:title="@string/private_message" />
        <item
            android:id="@+id/sidebar_announcements"
            android:icon="@drawable/ic_error"
            android:title="@string/announcements" />
        <item
            android:id="@+id/sidebar_settings"
            android:icon="@drawable/ic_settings_dark"
            android:title="@string/settings" />
        <item
            android:id="@+id/sidebar_logout"
            android:icon="@drawable/ic_power_settings_dark"
            android:title="@string/logout" />
    </group>

</menu>