<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toggle_folder"
        android:icon="@drawable/ic_drawer_outbox"
        android:title="@string/toggle_folder"
        app:showAsAction="always" />
    <item
        android:id="@+id/new_pm"
        app:icon="@drawable/ic_create"
        android:title="@string/new_pm"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_dark"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/send_pm"
        android:icon="@drawable/ic_send_dark"
        android:title="Send PM"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_dark"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
